AM_CFLAGS = \
	-DG_LOG_DOMAIN=\"Samplecat\" \
	-I$(top_srcdir)/lib \
	$(GTK_CFLAGS)

noinst_LTLIBRARIES = libgtk.la

libgtk_la_SOURCES = \
	cellrenderer_hypertext.c cellrenderer_hypertext.h \
	icon_theme.c icon_theme.h \
	menu.c menu.h \
	utils.c utils.h \
	scrolled_window.h

unused_source = \
	gimpactiongroup.c gimpactiongroup.h \
	table.c table.h \
	editablelabelbutton.c editablelabelbutton.h
